# HhheIM

./: .gitignore  CMakeLists.txt  build.bat  server.py
IMCore/: CMakeLists.txt
IMCore/include/: IMCore.h  stdafx.h
IMCore/src/: IMCore.cpp
WebBridge/: CMakeLists.txt
WebBridge/include/: WebBridge.h
WebBridge/src/: WebBridge.cpp  main.cpp
WebUI/: index.html
